Configurações para rodar os testes integrados pelo maven